Hotfix for overflowing image issue

--- a/src/components/programs/ProgramsPT.module.css
+++ b/src/components/programs/ProgramsPT.module.css
@@ -27,7 +27,10 @@
 
 .intro__content--image img {
     width: 60%;
+    max-width: 100%;
+    height: auto;
 }
+
 
 
 /* Media Queries */
